--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "license": "MIT",
   "scripts": {
     "start": "sls offline start",
-    "deploy": "sls deploy"
+    "deploy": "sls deploy",
+    "lint": "eslint src/**"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.56",
-    "serverless": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "serverless": "^2.12.0",
     "serverless-dynamodb-local": "^0.2.39",
-    "serverless-offline": "^5.12.1",
+    "serverless-offline": "^6.8.0",
     "serverless-plugin-typescript": "^1.1.9",
-    "typescript": "^3.9.5"
+    "typescript": "^4.1.2"
   },
   "dependencies": {}
 }
