--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "serverless-plugin-typescript": "^1.1.9",
     "typescript": "^4.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "apollo-server-lambda": "^2.19.0"
+  }
 }
