--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "apollo-server-lambda": "^2.19.0"
+    "apollo-server-lambda": "^2.19.0",
+    "graphql-scalars": "^1.5.0"
   }
 }
