--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "apollo-server-lambda": "^2.19.0",
-    "graphql-scalars": "^1.5.0"
+    "graphql-scalars": "^1.5.0",
+    "nanoid": "^3.1.18"
   }
 }
